# zus

./: .gitignore  README.md  pyproject.toml
src/zus/app/: git.py  pandoc.py
src/zus/click/: caching.py  eagle.py
src/zus/core/: __init__.py  caching.py  gendoc.py
tests/: gendoc.py  test_github.py
